objects/Trade_Account_Changes__c.object
<CustomObject>
    <fields>
        <fullName>Account_Balance_Date__c</fullName>
        <label>Account Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Closed_date__c</fullName>
        <label>Account Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Identifier__c</fullName>
        <label>Account Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Ownership_Type__c</fullName>
        <inlineHelpText>Account Ownership; Authorized User, Comaker, Individual, Joint Contractual Liability, Joint Participating, Maker, On Behalf Of, Terminated, Undesignated</inlineHelpText>
        <label>Account Ownership Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Ownership_Type_pick__c</fullName>
        <inlineHelpText>AuthorizedUser, Comaker, Individual, JointContractualLiability, JointParticipating, Maker, OnBehalfOf, Terminated, Undesignated</inlineHelpText>
        <label>Account Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AuthorizedUser</fullName>
                </value>
                <value>
                    <fullName>Comaker</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>JointContractualLiability</fullName>
                </value>
                <value>
                    <fullName>JointParticipating</fullName>
                </value>
                <value>
                    <fullName>Maker</fullName>
                </value>
                <value>
                    <fullName>OnBehalfOf</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Undesignated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Paid_Date__c</fullName>
        <label>Account Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Reported_Date__c</fullName>
        <label>Account Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status_Date__c</fullName>
        <label>Account Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status_Type2__c</fullName>
        <inlineHelpText>The status of the accout; Open, Closed, Frozen,Paid, Refinanced, Transferred</inlineHelpText>
        <label>Account Status Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Type__c</fullName>
        <label>Account Status Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Refinanced</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Type of account; Credit Line, Installment, Mortgage, Open revolving or Unknown</inlineHelpText>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_pick__c</fullName>
        <inlineHelpText>Values: Credit Line, Installment, Mortgage, Open, Revolving or Unknown</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_To_Pay_Off2__c</fullName>
        <label>Amount To Pay Off2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrower_ID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Off_Amount__c</fullName>
        <label>Charge Off Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Off_Date__c</fullName>
        <label>Charge Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Dispute_Indicator__c</fullName>
        <label>Consumer Dispute Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau__c</fullName>
        <label>Credit Bureau</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Business_Type__c</fullName>
        <inlineHelpText>Credit Grantor Type</inlineHelpText>
        <label>Credit Business Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Comment_Text__c</fullName>
        <label>Credit Comment - Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Comment_Type__c</fullName>
        <label>Credit Comment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Credit Limit is used on revolving accounts</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Loan_Type__c</fullName>
        <inlineHelpText>Type of Debt</inlineHelpText>
        <label>Credit Loan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Loan_Type_pick__c</fullName>
        <label>Credit Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>InstallmentLoan</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>UnknownLoanType</fullName>
                </value>
                <value>
                    <fullName>Other Lien</fullName>
                </value>
                <value>
                    <fullName>Non-Subject Mortgage</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Text__c</fullName>
        <label>Credit Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Most Recent Adverse Action Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Derogatory_Data_Indicator__c</fullName>
        <label>Derogatory Data Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualifying_Mortgage_Tradeline_2_Yr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if trade-line should disqualify applicant due to a mortgage charge-off, repossession, foreclosure or similar distressed event in the last two years.</inlineHelpText>
        <label>Disqualifying Mortgage Tradeline 2 Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualifying_Mortgage_Tradeline_5_Yr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if trade-line should disqualify applicant due to a mortgage charge-off, repossession, foreclosure or similar distressed event in the last five years.</inlineHelpText>
        <label>Disqualifying Mortgage Tradeline 5 Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECOA__c</fullName>
        <label>ECOA</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Monthly payments do not get included in the Sum of Debt Payments calculation</description>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H_Code__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Date__c</fullName>
        <description>Highest adverse action date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H_Type__c</fullName>
        <description>Highest adverser action type</description>
        <label>Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Credit_Amount__c</fullName>
        <label>High Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ignore_Tradeline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to ignore in DTI calculations</inlineHelpText>
        <label>Ignore Tradeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Repayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether a credit line is in repayment and cannot be drawn on. This is most commonly used for a HELOC. This has a direct impact on the Post-Close LTV calculation.</description>
        <inlineHelpText>Is the credit line / HELOC in repayment?</inlineHelpText>
        <label>In Repayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Comments__c</fullName>
        <label>Interest Rate Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Adjustable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Loan__c</fullName>
        <label>Lender Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Interest_Rate_Sub_Type__c</fullName>
        <label>Lien Interest Rate Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30-yr FRM</fullName>
                </value>
                <value>
                    <fullName>15-yr FRM</fullName>
                </value>
                <value>
                    <fullName>20-yr FRM</fullName>
                </value>
                <value>
                    <fullName>10-yr FRM</fullName>
                </value>
                <value>
                    <fullName>5/1 ARM</fullName>
                </value>
                <value>
                    <fullName>7/1 ARM</fullName>
                </value>
                <value>
                    <fullName>10/1 ARM</fullName>
                </value>
                <value>
                    <fullName>I/O</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>HECM</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Reverse</fullName>
                </value>
                <value>
                    <fullName>Tax Lien</fullName>
                </value>
                <value>
                    <fullName>Judgment</fullName>
                </value>
                <value>
                    <fullName>UCC</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lien_Position__c</fullName>
        <label>Lien Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                    <isActive>false</isActive>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Second</fullName>
                    <isActive>false</isActive>
                    <label>Second</label>
                </value>
                <value>
                    <fullName>Third</fullName>
                    <isActive>false</isActive>
                    <label>Third</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Update_Indicator__c</fullName>
        <label>Manual Update Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Reviewed__c</fullName>
        <label>Months Reviewed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Institution__c</fullName>
        <description>Name of the debt holder</description>
        <label>Name of the Institution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Creditor__c</fullName>
        <label>Original Creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Term__c</fullName>
        <label>Original Term</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Amount__c</fullName>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Pattern_Data__c</fullName>
        <label>Payment Pattern Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Pattern_Start_Date__c</fullName>
        <label>Payment Pattern Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Code__c</fullName>
        <label>Rating Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Type__c</fullName>
        <label>Rating Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Term2__c</fullName>
        <label>Remaining Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Subordination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req Subordination Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Code__c</fullName>
        <label>Subscriber Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Pct_Value_Of_Home__c</fullName>
        <label>Target Percent of Home Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Terms_Description__c</fullName>
        <label>Terms Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Source_Type__c</fullName>
        <label>Terms Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Paid_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Paid Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Close_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Close Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type; Most Recent Adverse action</description>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unison_Calculated_Monthly_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unison Calculated Monthly Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_days_late__c</fullName>
        <label>30 days late</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X60_Days_Late__c</fullName>
        <label>60 days Late</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X90_days_late__c</fullName>
        <label>90 days late</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Trade Account Changes</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Trade Account Changes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Account Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>